[package]
name = "Meteorite-jr"
version = "0.1.0"
edition = "2024"

[features]
mock = []
real = []
default = ["real"]

[dependencies]
chrono = "0.4.42"
eframe = "0.33.3"
egui = "0.33.3"
egui_plot = "0.34.0"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "native-tls"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-serial = "5.4.5"
